[tool.poetry]
name = "aita-workshop"
version = "0.1.0"
description = ""
authors = ["aita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
aita = {version = "^0.1.2", extras = ["snowflake"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
